bin/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APPEND
    LIST
    QOT
    colon

Grammar

Rule 0     S' -> teigilist
Rule 1     teigilist -> teigi
Rule 2     teigilist -> teigilist teigi
Rule 3     paramlist -> param
Rule 4     paramlist -> paramlist CONMA param
Rule 5     param -> TYPE ID
Rule 6     param -> TYPE
Rule 7     bun -> ID EQUALS LAMDA KAKKO paramlist KOKKA LBRACE bunlist RBRACE SEMI
Rule 8     bun -> ID KAKKO shiki KOKKA SEMI
Rule 9     teigi -> STR
Rule 10    bun -> ID EQUALS ID SEMI
Rule 11    teigi -> TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
Rule 12    teigi -> TYPE ID yaji TYPE LBRACE bunlist RBRACE
Rule 13    teigi -> STRUCT ID LBRACE teigilist RBRACE
Rule 14    class -> classf
Rule 15    class -> class classf
Rule 16    teigi -> CLASS ID LBRACE class RBRACE
Rule 17    teigi -> INCLUDE LBRACE shiki RBRACE
Rule 18    classf -> ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
Rule 19    bun -> ID PIRIOD ID KAKKO shiki KOKKA SEMI
Rule 20    bun -> PASS SEMI
Rule 21    bunlist -> bun
Rule 22    bunlist -> bunlist bun
Rule 23    bun -> TYPE ID EQUALS shiki SEMI
Rule 24    bun -> TYPE ID EQUALS LISL shiki LISR SEMI
Rule 25    bun -> TYPE ID EQUALS ID LISL NUMBER LISR SEMI
Rule 26    bun -> ID EQUALS LISL LISR SEMI
Rule 27    bun -> ID EQUALS ID OPTASU NUMBER SEMI
Rule 28    bun -> ID EQUALS ID OPKAKERU NUMBER SEMI
Rule 29    bun -> ID EQUALS ID OPMIN NUMBER SEMI
Rule 30    bun -> ID EQUALS ID OPWARU NUMBER SEMI
Rule 31    shiki -> TYPEF KAKKO shiki KOKKA
Rule 32    shiki -> TYPE KAKKO shiki KOKKA
Rule 33    shiki -> RESERV KAKKO shiki KOKKA
Rule 34    bun -> RETURN shiki SEMI
Rule 35    bun -> RETURN bun
Rule 36    bun -> IF hikaku LBRACE bunlist RBRACE
Rule 37    bun -> IF hikaku LBRACE bunlist RBRACE ELSE LBRACE bunlist RBRACE
Rule 38    bun -> WHILE shiki LBRACE bunlist RBRACE
Rule 39    hikaku -> shiki
Rule 40    hikaku -> hikaku EQOP shiki
Rule 41    hikaku -> hikaku dainari shiki
Rule 42    hikaku -> hikaku syounari shiki
Rule 43    shiki -> NUMBER
Rule 44    shiki -> ID
Rule 45    shiki -> TYPE
Rule 46    shiki -> STR
Rule 47    bun -> PASS
Rule 48    bun -> PASS KAKKO KOKKA
Rule 49    bun -> PASS KAKKO PASS KOKKA SEMI
Rule 50    shiki -> LEN KAKKO shiki KOKKA
Rule 51    bun -> ID LISL shiki LISR EQUALS shiki SEMI
Rule 52    shiki -> OPMIN NUMBER
Rule 53    shiki -> shiki CONMA shiki
Rule 54    shiki -> shiki OPTASU shiki
Rule 55    shiki -> shiki OPKAKERU shiki
Rule 56    shiki -> shiki OPMIN shiki
Rule 57    shiki -> shiki OPWARU shiki
Rule 58    shiki -> KAKKO shiki KOKKA
Rule 59    shiki -> shiki CONMA ID
Rule 60    bun -> RESERV ID LISL NUMBER LISR EQUALS STR SEMI
Rule 61    bun -> RESERV ID LISL ID LISR EQUALS STR SEMI
Rule 62    bun -> RESERV ID LISL NUMBER LISR EQUALS ID SEMI
Rule 63    bun -> RESERV ID LISL ID LISR EQUALS ID SEMI
Rule 64    bun -> RESERV KAKKO shiki KOKKA SEMI
Rule 65    bun -> RESERV KAKKO STR KOKKA SEMI
Rule 66    shiki -> ID KAKKO shiki KOKKA
Rule 67    shiki -> ID KAKKO KOKKA
Rule 68    bun -> TYPE TYPE LBRACE letlist RBRACE SEMI
Rule 69    bun -> GLOBAL TYPE LBRACE letlist RBRACE SEMI
Rule 70    letlist -> ID EQUALS STR SEMI
Rule 71    letlist -> ID EQUALS NUMBER SEMI
Rule 72    letlist -> letlist ID EQUALS STR SEMI
Rule 73    letlist -> letlist ID EQUALS NUMBER SEMI
Rule 74    bun -> ID EQUALS ID OPTASU STR SEMI
Rule 75    bun -> ID EQUALS STR OPTASU ID SEMI
Rule 76    bun -> ID OPTASU OPTASU SEMI
Rule 77    bun -> STR OPTASU OPTASU SEMI

Terminals, with rules where they appear

APPEND               : 
CLASS                : 16
CONMA                : 4 53 59
ELSE                 : 37
EQOP                 : 40
EQUALS               : 7 10 23 24 25 26 27 28 29 30 51 60 61 62 63 70 71 72 73 74 75
GLOBAL               : 69
ID                   : 5 7 8 10 10 11 12 13 16 18 19 19 23 24 25 25 26 27 27 28 28 29 29 30 30 44 51 59 60 61 61 62 62 63 63 63 66 67 70 71 72 73 74 74 75 75 76
IF                   : 36 37
INCLUDE              : 17
KAKKO                : 7 8 11 18 19 31 32 33 48 49 50 58 64 65 66 67
KOKKA                : 7 8 11 18 19 31 32 33 48 49 50 58 64 65 66 67
LAMDA                : 7
LBRACE               : 7 11 12 13 16 17 18 36 37 37 38 68 69
LEN                  : 50
LISL                 : 24 25 26 51 60 61 62 63
LISR                 : 24 25 26 51 60 61 62 63
LIST                 : 
NUMBER               : 25 27 28 29 30 43 52 60 62 71 73
OPKAKERU             : 28 55
OPMIN                : 29 52 56
OPTASU               : 27 54 74 75 76 76 77 77
OPWARU               : 30 57
PASS                 : 20 47 48 49 49
PIRIOD               : 19
QOT                  : 
RBRACE               : 7 11 12 13 16 17 18 36 37 37 38 68 69
RESERV               : 33 60 61 62 63 64 65
RETURN               : 34 35
SEMI                 : 7 8 10 19 20 23 24 25 26 27 28 29 30 34 49 51 60 61 62 63 64 65 68 69 70 71 72 73 74 75 76 77
STR                  : 9 46 60 61 65 70 72 74 75 77
STRUCT               : 13
TYPE                 : 5 6 11 11 12 12 18 23 24 25 32 45 68 68 69
TYPEF                : 31
WHILE                : 38
colon                : 
dainari              : 41
error                : 
syounari             : 42
yaji                 : 11 12 18

Nonterminals, with rules where they appear

bun                  : 21 22 35
bunlist              : 7 11 12 18 22 36 37 37 38
class                : 15 16
classf               : 14 15
hikaku               : 36 37 40 41 42
letlist              : 68 69 72 73
param                : 3 4
paramlist            : 4 7 11 18
shiki                : 8 17 19 23 24 31 32 33 34 38 39 40 41 42 50 51 51 53 53 54 54 55 55 56 56 57 57 58 59 64 66
teigi                : 1 2
teigilist            : 2 13 0

Parsing method: LALR

state 0

    (0) S' -> . teigilist
    (1) teigilist -> . teigi
    (2) teigilist -> . teigilist teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigilist                      shift and go to state 1
    teigi                          shift and go to state 2

state 1

    (0) S' -> teigilist .
    (2) teigilist -> teigilist . teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigi                          shift and go to state 8

state 2

    (1) teigilist -> teigi .

    STR             reduce using rule 1 (teigilist -> teigi .)
    TYPE            reduce using rule 1 (teigilist -> teigi .)
    STRUCT          reduce using rule 1 (teigilist -> teigi .)
    CLASS           reduce using rule 1 (teigilist -> teigi .)
    INCLUDE         reduce using rule 1 (teigilist -> teigi .)
    $end            reduce using rule 1 (teigilist -> teigi .)
    RBRACE          reduce using rule 1 (teigilist -> teigi .)


state 3

    (9) teigi -> STR .

    STR             reduce using rule 9 (teigi -> STR .)
    TYPE            reduce using rule 9 (teigi -> STR .)
    STRUCT          reduce using rule 9 (teigi -> STR .)
    CLASS           reduce using rule 9 (teigi -> STR .)
    INCLUDE         reduce using rule 9 (teigi -> STR .)
    $end            reduce using rule 9 (teigi -> STR .)
    RBRACE          reduce using rule 9 (teigi -> STR .)


state 4

    (11) teigi -> TYPE . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> TYPE . ID yaji TYPE LBRACE bunlist RBRACE

    ID              shift and go to state 9


state 5

    (13) teigi -> STRUCT . ID LBRACE teigilist RBRACE

    ID              shift and go to state 10


state 6

    (16) teigi -> CLASS . ID LBRACE class RBRACE

    ID              shift and go to state 11


state 7

    (17) teigi -> INCLUDE . LBRACE shiki RBRACE

    LBRACE          shift and go to state 12


state 8

    (2) teigilist -> teigilist teigi .

    STR             reduce using rule 2 (teigilist -> teigilist teigi .)
    TYPE            reduce using rule 2 (teigilist -> teigilist teigi .)
    STRUCT          reduce using rule 2 (teigilist -> teigilist teigi .)
    CLASS           reduce using rule 2 (teigilist -> teigilist teigi .)
    INCLUDE         reduce using rule 2 (teigilist -> teigilist teigi .)
    $end            reduce using rule 2 (teigilist -> teigilist teigi .)
    RBRACE          reduce using rule 2 (teigilist -> teigilist teigi .)


state 9

    (11) teigi -> TYPE ID . KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> TYPE ID . yaji TYPE LBRACE bunlist RBRACE

    KAKKO           shift and go to state 13
    yaji            shift and go to state 14


state 10

    (13) teigi -> STRUCT ID . LBRACE teigilist RBRACE

    LBRACE          shift and go to state 15


state 11

    (16) teigi -> CLASS ID . LBRACE class RBRACE

    LBRACE          shift and go to state 16


state 12

    (17) teigi -> INCLUDE LBRACE . shiki RBRACE
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 17

state 13

    (11) teigi -> TYPE ID KAKKO . paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (3) paramlist -> . param
    (4) paramlist -> . paramlist CONMA param
    (5) param -> . TYPE ID
    (6) param -> . TYPE

    TYPE            shift and go to state 27

    paramlist                      shift and go to state 28
    param                          shift and go to state 29

state 14

    (12) teigi -> TYPE ID yaji . TYPE LBRACE bunlist RBRACE

    TYPE            shift and go to state 30


state 15

    (13) teigi -> STRUCT ID LBRACE . teigilist RBRACE
    (1) teigilist -> . teigi
    (2) teigilist -> . teigilist teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigilist                      shift and go to state 31
    teigi                          shift and go to state 2

state 16

    (16) teigi -> CLASS ID LBRACE . class RBRACE
    (14) class -> . classf
    (15) class -> . class classf
    (18) classf -> . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE

    ID              shift and go to state 32

    class                          shift and go to state 33
    classf                         shift and go to state 34

state 17

    (17) teigi -> INCLUDE LBRACE shiki . RBRACE
    (53) shiki -> shiki . CONMA shiki
    (54) shiki -> shiki . OPTASU shiki
    (55) shiki -> shiki . OPKAKERU shiki
    (56) shiki -> shiki . OPMIN shiki
    (57) shiki -> shiki . OPWARU shiki
    (59) shiki -> shiki . CONMA ID

    RBRACE          shift and go to state 35
    CONMA           shift and go to state 36
    OPTASU          shift and go to state 37
    OPKAKERU        shift and go to state 38
    OPMIN           shift and go to state 39
    OPWARU          shift and go to state 40


state 18

    (31) shiki -> TYPEF . KAKKO shiki KOKKA

    KAKKO           shift and go to state 41


state 19

    (58) shiki -> KAKKO . shiki KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 42

state 20

    (32) shiki -> TYPE . KAKKO shiki KOKKA
    (45) shiki -> TYPE .

    KAKKO           shift and go to state 43
    RBRACE          reduce using rule 45 (shiki -> TYPE .)
    CONMA           reduce using rule 45 (shiki -> TYPE .)
    OPTASU          reduce using rule 45 (shiki -> TYPE .)
    OPKAKERU        reduce using rule 45 (shiki -> TYPE .)
    OPMIN           reduce using rule 45 (shiki -> TYPE .)
    OPWARU          reduce using rule 45 (shiki -> TYPE .)
    KOKKA           reduce using rule 45 (shiki -> TYPE .)
    SEMI            reduce using rule 45 (shiki -> TYPE .)
    LBRACE          reduce using rule 45 (shiki -> TYPE .)
    EQOP            reduce using rule 45 (shiki -> TYPE .)
    dainari         reduce using rule 45 (shiki -> TYPE .)
    syounari        reduce using rule 45 (shiki -> TYPE .)
    LISR            reduce using rule 45 (shiki -> TYPE .)


state 21

    (33) shiki -> RESERV . KAKKO shiki KOKKA

    KAKKO           shift and go to state 44


state 22

    (43) shiki -> NUMBER .

    RBRACE          reduce using rule 43 (shiki -> NUMBER .)
    CONMA           reduce using rule 43 (shiki -> NUMBER .)
    OPTASU          reduce using rule 43 (shiki -> NUMBER .)
    OPKAKERU        reduce using rule 43 (shiki -> NUMBER .)
    OPMIN           reduce using rule 43 (shiki -> NUMBER .)
    OPWARU          reduce using rule 43 (shiki -> NUMBER .)
    KOKKA           reduce using rule 43 (shiki -> NUMBER .)
    SEMI            reduce using rule 43 (shiki -> NUMBER .)
    LBRACE          reduce using rule 43 (shiki -> NUMBER .)
    EQOP            reduce using rule 43 (shiki -> NUMBER .)
    dainari         reduce using rule 43 (shiki -> NUMBER .)
    syounari        reduce using rule 43 (shiki -> NUMBER .)
    LISR            reduce using rule 43 (shiki -> NUMBER .)


state 23

    (44) shiki -> ID .
    (66) shiki -> ID . KAKKO shiki KOKKA
    (67) shiki -> ID . KAKKO KOKKA

    RBRACE          reduce using rule 44 (shiki -> ID .)
    CONMA           reduce using rule 44 (shiki -> ID .)
    OPTASU          reduce using rule 44 (shiki -> ID .)
    OPKAKERU        reduce using rule 44 (shiki -> ID .)
    OPMIN           reduce using rule 44 (shiki -> ID .)
    OPWARU          reduce using rule 44 (shiki -> ID .)
    KOKKA           reduce using rule 44 (shiki -> ID .)
    SEMI            reduce using rule 44 (shiki -> ID .)
    LBRACE          reduce using rule 44 (shiki -> ID .)
    EQOP            reduce using rule 44 (shiki -> ID .)
    dainari         reduce using rule 44 (shiki -> ID .)
    syounari        reduce using rule 44 (shiki -> ID .)
    LISR            reduce using rule 44 (shiki -> ID .)
    KAKKO           shift and go to state 45


state 24

    (46) shiki -> STR .

    RBRACE          reduce using rule 46 (shiki -> STR .)
    CONMA           reduce using rule 46 (shiki -> STR .)
    OPTASU          reduce using rule 46 (shiki -> STR .)
    OPKAKERU        reduce using rule 46 (shiki -> STR .)
    OPMIN           reduce using rule 46 (shiki -> STR .)
    OPWARU          reduce using rule 46 (shiki -> STR .)
    KOKKA           reduce using rule 46 (shiki -> STR .)
    SEMI            reduce using rule 46 (shiki -> STR .)
    LBRACE          reduce using rule 46 (shiki -> STR .)
    EQOP            reduce using rule 46 (shiki -> STR .)
    dainari         reduce using rule 46 (shiki -> STR .)
    syounari        reduce using rule 46 (shiki -> STR .)
    LISR            reduce using rule 46 (shiki -> STR .)


state 25

    (50) shiki -> LEN . KAKKO shiki KOKKA

    KAKKO           shift and go to state 46


state 26

    (52) shiki -> OPMIN . NUMBER

    NUMBER          shift and go to state 47


state 27

    (5) param -> TYPE . ID
    (6) param -> TYPE .

    ID              shift and go to state 48
    KOKKA           reduce using rule 6 (param -> TYPE .)
    CONMA           reduce using rule 6 (param -> TYPE .)


state 28

    (11) teigi -> TYPE ID KAKKO paramlist . KOKKA yaji TYPE LBRACE bunlist RBRACE
    (4) paramlist -> paramlist . CONMA param

    KOKKA           shift and go to state 49
    CONMA           shift and go to state 50


state 29

    (3) paramlist -> param .

    KOKKA           reduce using rule 3 (paramlist -> param .)
    CONMA           reduce using rule 3 (paramlist -> param .)


state 30

    (12) teigi -> TYPE ID yaji TYPE . LBRACE bunlist RBRACE

    LBRACE          shift and go to state 51


state 31

    (13) teigi -> STRUCT ID LBRACE teigilist . RBRACE
    (2) teigilist -> teigilist . teigi
    (9) teigi -> . STR
    (11) teigi -> . TYPE ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE
    (12) teigi -> . TYPE ID yaji TYPE LBRACE bunlist RBRACE
    (13) teigi -> . STRUCT ID LBRACE teigilist RBRACE
    (16) teigi -> . CLASS ID LBRACE class RBRACE
    (17) teigi -> . INCLUDE LBRACE shiki RBRACE

    RBRACE          shift and go to state 52
    STR             shift and go to state 3
    TYPE            shift and go to state 4
    STRUCT          shift and go to state 5
    CLASS           shift and go to state 6
    INCLUDE         shift and go to state 7

    teigi                          shift and go to state 8

state 32

    (18) classf -> ID . KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE

    KAKKO           shift and go to state 53


state 33

    (16) teigi -> CLASS ID LBRACE class . RBRACE
    (15) class -> class . classf
    (18) classf -> . ID KAKKO paramlist KOKKA yaji TYPE LBRACE bunlist RBRACE

    RBRACE          shift and go to state 54
    ID              shift and go to state 32

    classf                         shift and go to state 55

state 34

    (14) class -> classf .

    RBRACE          reduce using rule 14 (class -> classf .)
    ID              reduce using rule 14 (class -> classf .)


state 35

    (17) teigi -> INCLUDE LBRACE shiki RBRACE .

    STR             reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    TYPE            reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    STRUCT          reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    CLASS           reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    INCLUDE         reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    $end            reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)
    RBRACE          reduce using rule 17 (teigi -> INCLUDE LBRACE shiki RBRACE .)


state 36

    (53) shiki -> shiki CONMA . shiki
    (59) shiki -> shiki CONMA . ID
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    ID              shift and go to state 57
    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 56

state 37

    (54) shiki -> shiki OPTASU . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 58

state 38

    (55) shiki -> shiki OPKAKERU . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 59

state 39

    (56) shiki -> shiki OPMIN . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 60

state 40

    (57) shiki -> shiki OPWARU . shiki
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 61

state 41

    (31) shiki -> TYPEF KAKKO . shiki KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 62

state 42

    (58) shiki -> KAKKO shiki . KOKKA
    (53) shiki -> shiki . CONMA shiki
    (54) shiki -> shiki . OPTASU shiki
    (55) shiki -> shiki . OPKAKERU shiki
    (56) shiki -> shiki . OPMIN shiki
    (57) shiki -> shiki . OPWARU shiki
    (59) shiki -> shiki . CONMA ID

    KOKKA           shift and go to state 63
    CONMA           shift and go to state 36
    OPTASU          shift and go to state 37
    OPKAKERU        shift and go to state 38
    OPMIN           shift and go to state 39
    OPWARU          shift and go to state 40


state 43

    (32) shiki -> TYPE KAKKO . shiki KOKKA
    (31) shiki -> . TYPEF KAKKO shiki KOKKA
    (32) shiki -> . TYPE KAKKO shiki KOKKA
    (33) shiki -> . RESERV KAKKO shiki KOKKA
    (43) shiki -> . NUMBER
    (44) shiki -> . ID
    (45) shiki -> . TYPE
    (46) shiki -> . STR
    (50) shiki -> . LEN KAKKO shiki KOKKA
    (52) shiki -> . OPMIN NUMBER
    (53) shiki -> . shiki CONMA shiki
    (54) shiki -> . shiki OPTASU shiki
    (55) shiki -> . shiki OPKAKERU shiki
    (56) shiki -> . shiki OPMIN shiki
    (57) shiki -> . shiki OPWARU shiki
    (58) shiki -> . KAKKO shiki KOKKA
    (59) shiki -> . shiki CONMA ID
    (66) shiki -> . ID KAKKO shiki KOKKA
    (67) shiki -> . ID KAKKO KOKKA

    TYPEF           shift and go to state 18
    TYPE            shift and go to state 20
    RESERV          shift and go to state 21
    NUMBER          shift and go to state 22
    ID              shift and go to state 23
    STR             shift and go to state 24
    LEN             shift and go to state 25
    OPMIN           shift and go to state 26
    KAKKO           shift and go to state 19

    shiki                          shift and go to state 64

state 44
